# Computer-Room-Management-System

./: CMakeLists.txt  README.md
Include/: globalFile.h
data/: student.txt  teacher.txt
src/: CMakeLists.txt  main.cpp
src/ComputerRoom/: CMakeLists.txt
src/Identity/: CMakeLists.txt
src/manager/: CMakeLists.txt  manager.h
src/orderFile/: CMakeLists.txt  orderFile.cpp  orderFile.h
src/student/: CMakeLists.txt
src/teacher/: CMakeLists.txt  teacher.h
